--- a/style.css
+++ b/style.css
@@ -1,1 +1,275 @@
 * { box-sizing: border-box; }
+
+a:hover {
+  text-decoration: none;
+}
+
+/* ============================================== Header ============================================== */
+
+.header {
+  height: 100vh;
+}
+
+.top-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  padding: 2em 0.5em;
+}
+
+.logo {
+
+  position: relative;
+  top: -1px;
+  width: 50px; /*64px in larger devices*/ 
+  height: 50px;
+  border-radius: 50%;
+  background: #4456FB;
+  margin-left: 5%;
+}
+
+.logo-text {
+  
+  position: absolute;
+  top: 14px;
+  left: 9px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 105.3%;
+  color: #FFFFFF;
+}
+
+.nav-links { 
+  display: flex;
+  width: 60%;
+  justify-content: space-between;
+  margin-left: 9%;
+  position: relative;
+  top: 3px;
+}
+
+.nav-links > * {
+  display: inline-block;
+  font-family: Sora;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 0.77rem;
+  line-height: 338.5%;
+  color: #FFFFFF;
+  margin: 0 0.2em;
+}
+
+.main-info {
+  position: relative;
+  
+  background: url('/assets/shutterstock.png') no-repeat center / cover;
+}
+
+.purple-gradient {
+
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(248.05deg, #AE5BD6 24.1%, #4052F0 99.44%);
+  background-blend-mode: screen;
+  opacity: 0.7;
+}
+
+.dev-info {
+  position: relative;
+  color: white;
+  margin-top: 9em;
+}
+
+.dev-name {
+  font-family: Sora;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.4rem;
+  line-height: 105.3%;
+  text-align: center;
+}
+
+.dev-role {
+  font-family: Sora;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 0.8rem;
+  line-height: 105.3%;
+  text-align: center;
+}
+
+.dev-about {
+  display: inline-block;
+  font-family: Sora;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 20px;
+  padding: 0 0.8em;
+  color: #FFFFFF;
+}
+
+.social-links-box {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  background: #FFFFFF;
+  border-radius: 20px;
+  padding: 1.7em;
+  margin: 1em 0.7em;
+}
+
+.socials-text {
+  text-align: center;
+  font-family: Sora;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 0.8rem;
+  line-height: 20px;
+  color: #4F5461;
+  white-space: nowrap;
+}
+
+.social-links {
+  white-space: nowrap;
+}
+
+@media screen and (max-width: 260px) {
+
+  .logo { top: -2px; }
+  .nav-links { 
+    margin-left: 5%;
+    top: 6px;
+  }
+  .nav-links > * { font-size: 0.65rem; }
+  .socials-text { margin-right: 0; }
+
+}
+
+@media screen and (min-width: 768px) {
+  .top-nav {
+    position: static;
+    z-index: 1;
+    display: flex;
+    flex-flow: column nowrap;
+  }
+
+  .logo {
+
+    position: relative;
+    top: -1px;
+    left: 25%;
+    width: 64px; /*64px in larger devices*/ 
+    height: 64px;
+    border-radius: 50%;
+    background: #4456FB;
+    margin-left: 5%;
+  }
+  
+  .logo-text {
+    
+    position: absolute;
+    top: 21px;
+    left: 15px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 105.3%;
+    color: #FFFFFF;
+  }
+
+  .nav-links { 
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+    margin: 32%;
+  }
+  
+  .nav-links > * {
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 338.5%;
+    color: #4456FB;
+  }
+
+  .main-info {
+    background: url("assets/header-shape.png") no-repeat left / cover;
+  }
+
+  .purple-gradient {
+    display: none;
+  }
+
+  .dev-info {
+    position: relative;
+    text-align: left;
+    color: white;
+    margin: 12.5% 7.5% 10% 18.5%;
+  }
+  
+  .dev-name {
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 5rem;
+    line-height: 105.3%;
+    text-align: left;
+    color: #FFFFFF;
+  }
+  
+  .dev-role {
+
+    text-align: left;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.75rem;
+    line-height: 105.3%;
+    color: #FFFFFF;
+  }
+  
+  .dev-about {
+    text-align: left;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 22px;
+    color: #FFFFFF;
+    padding: 0 45% 1em 0;
+  }
+  
+  .social-links-box {
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    background: #FFFFFF;
+    border-radius: 20px;
+    padding: 0.55em;
+    margin: 0;
+  }
+  
+  .socials-text {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    color: #4F5461;
+    padding-left: 1em;
+  }
+  
+  .social-links {
+    white-space: nowrap;
+    margin-right: 3em;
+    font-size: 1.4rem;
+  }
+}
