--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@ a:hover {
   padding-right: 2em;
  }
 
- .flex-center {
-   display: flex;
-   justify-content: center;
-   align-items: center;
- }
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /* ============================================== Header ============================================== */
 
@@ -186,7 +186,7 @@ a:hover {
 }
 
 .project-3 .p-image {
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 98.35%), url("assets/newsweek.jpg") no-repeat center / cover;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 98.35%), url("assets/Phaser-Logo-Small.png") no-repeat center / contain;
 }
 
 .project-4 .p-image {
@@ -223,7 +223,7 @@ a:hover {
 .p-btn {
   border-radius: 60px;
   margin-bottom: 1.5em;
-  padding: 0.8em;
+  padding: 0.6em;
   opacity: 1;
 }
 
@@ -338,7 +338,6 @@ max-width: 120px;
   }
 
   .dev-name {
-
     font-family: Roboto;
     font-style: normal;
     font-weight: bold;
@@ -346,6 +345,7 @@ max-width: 120px;
     line-height: 105.3%;
     text-align: left;
     color: #FFFFFF;
+    padding: 0;
   }
   
   .dev-role {
@@ -357,6 +357,7 @@ max-width: 120px;
     font-size: 1.75rem;
     line-height: 105.3%;
     color: #FFFFFF;
+    padding: 0;
   }
   
   .dev-about {
@@ -396,7 +397,6 @@ max-width: 120px;
   }
 
   .section-h {
-
     font-family: Roboto;
     font-style: normal;
     font-weight: bold;
@@ -422,18 +422,21 @@ max-width: 120px;
     width: 100%;
     height: 240px;
     border-radius: 10px;
-  
   }
 
   .p-btn {
     opacity: 0;
-    padding: 0.7em;
-    width: 50%;
+    padding: 0.5em;
+    width: 40%;
     position: absolute;
     z-index: 4;
     bottom: 0;
     left: 7%;
     transition: opacity 0.2s;
+  }
+
+  .p-live {
+    left: 53%;
   }
 
   .badge-cont {
