--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -294,6 +294,39 @@ a:hover {
   color: #737986;
 }
 
+.footer-cont {
+  background: linear-gradient(234.04deg, #7f38da 0%, #4052f0 71.02%);
+  height: 561px;
+  padding-top: 1em;
+}
+
+.contact-form-in {
+  height: 59px;
+  background: #fff;
+  border: 1px solid #accdff;
+  box-sizing: border-box;
+  box-shadow: 0 7px 15px rgba(95, 104, 186, 0.13);
+  border-radius: 14px;
+  margin-bottom: 1em;
+}
+
+.contact-inp-cont {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.message-inp {
+  height: 185px;
+  resize: none;
+}
+
+.contact-btn {
+  background: #fa4969;
+  border-radius: 60px;
+  width: 100%;
+  height: 59px;
+}
+
 @media screen and (max-width: 260px) {
 
   .logo { top: -2px; }
@@ -524,5 +557,32 @@ a:hover {
     font-size: 16px;
     line-height: 242.5%;
     color: #4f5461;
+  }
+
+  .footer-cont {
+    background: url('../assets/footer-shape.png') no-repeat top left / cover;
+    width: 75%;
+    float: right;
+  }
+
+  .contact-form {
+    margin-left: 9.6em;
+  }
+
+  .contact-form-in {
+    width: 332px;
+  }
+
+  .contact-inp-cont {
+    flex-flow: row nowrap;
+  }
+
+  .message-inp {
+    width: 672px;
+    height: 185px;
+  }
+
+  .contact-btn {
+    width: 242px;
   }
 }
