--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -180,7 +180,7 @@ a:hover {
 }
 
 .project-2 .p-image {
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 98.35%), url("../assets/todolist.jpg") no-repeat center / cover;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 98.35%), url("../assets/pc-games.png") no-repeat center / contain;
 }
 
 .project-3 .p-image {
