--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -176,14 +176,18 @@ a:hover {
 }
 
 .project-1 .p-image {
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 98.35%), url("../assets/big-strawberry.png") no-repeat center / cover;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 98.35%), url("../assets/fashion-shop.png") no-repeat center / cover;
 }
 
 .project-2 .p-image {
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 98.35%), url("../assets/pc-games.png") no-repeat center / contain;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 98.35%), url("../assets/big-strawberry.png") no-repeat center / cover;
 }
 
 .project-3 .p-image {
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 98.35%), url("../assets/pc-games.png") no-repeat center / contain;
+}
+
+.project-4 .p-image {
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 98.35%), url("../assets/Phaser-Logo-Small.png") no-repeat center / contain;
 }
 
@@ -530,7 +534,7 @@ a:hover {
 
   .badge-cont {
     opacity: 0;
-    width: 70%;
+    width: 90%;
     position: absolute;
     top: 36px;
     left: 20px;
